<resources>
    <string name="app_name">Inspection Review Manager</string>

    <!-- INSPECTION REVIEW CATEGORY TEXT -->
    <string name="date">Date</string>
    <string name="project">Project</string>
    <string name="concrete">Concrete</string>
    <string name="framing">Framing</string>
    <string name="conclusion">Conclusion</string>

    <!-- MAIN ACTIVITY HEADING TEXT -->
    <string name="inspection_review_archive">Inspection Review Archive</string>
    <string name="logo_menu_button_content_description">Logo Menu</string>

    <!-- DEFAULT AUTOCOMPLETE TEXT -->
    <string name="project_number_default">C</string>
    <string name="province_default">BC</string>

    <!-- DIALOG TEXT -->
    <string name="dialogue_review_in_progress_title">Review Already In Progress</string>
    <string name="dialogue_review_in_progress_message">All data in the current session will be lost.\nDo you wish to continue?</string>
    <string name="dialogue_update_review_title">Review Already On Record</string>
    <string name="dialogue_update_review_message">Would you like to update the previous review?</string>
    <string name="dialogue_close_review_title">Close Review</string>
    <string name="dialogue_close_review_message">All data in this session will be lost.\nDo you wish to continue?</string>
    <string name="select_dialog_title">Available Actions:</string>
    <string name="select_dialog_message">What would you like to do?</string>
    <string name="delete_dialog_title">Delete Review"</string>
    <string name="delete_dialog_message">This action will permanently delete the review on record.\nDo you wish to continue?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- BUTTON TEXT -->
    <string name="button_settings">Settings</string> <!-- <Data> <![CDATA[ <u>Settings</u> ]]> </Data> -->
    <string name="button_close">Close</string>
    <string name="button_select">Select</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit_options">Options</string>
    <string name="button_edit">Edit</string>
    <string name="button_export">Export</string>
    <string name="button_inspection_review">Inspection Review</string>

    <!-- TOAST TEXT -->
    <string name="write_permissions_denied">Write Permissions Denied</string>
    <string name="exporting_doc_message">Exporting Doc"</string>
    <string name="exported_doc_message">Doc Exported"</string>
    <string name="unable_to_export_doc_message">Unable To Export Doc"</string>
    <string name="exported_database_message">Database Exported"</string>
    <string name="exporting_database_message">Exporting Database"</string>
    <string name="unable_to_export_database_message">Unable To Export Database"</string>
    <string name="updated_message">Review Updated"</string>
    <string name="saved_message">Inspection Review Saved"</string>
    <string name="delete_message">Deleted Review"</string>
    <string name="not_updated_message">Review Not Updated"</string>

    <!-- STRING ARRAYS -->
    <string-array name="arr">
        <item>@string/date</item>
        <item>@string/project</item>
        <item>@string/concrete</item>
        <item>@string/framing</item>
        <item>@string/conclusion</item>
    </string-array>

    <string-array name="cities">
        <item>Abbotsford</item>
        <item>Anmore</item>
        <item>Belcarra</item>
        <item>Bowen Island</item>
        <item>Burnaby</item>
        <item>Chilliwack</item>
        <item>Coquitlam</item>
        <item>Delta</item>
        <item>Fraser Valley</item>
        <item>Kent</item>
        <item>Langley</item>
        <item>Maple Ridge</item>
        <item>Mission</item>
        <item>New Westminster</item>
        <item>North Vancouver</item>
        <item>Pitt Meadows</item>
        <item>Port Moody</item>
        <item>Port Coquitlam</item>
        <item>Richmond</item>
        <item>Squamish</item>
        <item>Surrey</item>
        <item>Thompson-Nicola</item>
        <item>Vancouver</item>
        <item>Victoria</item>
        <item>West Vancouver</item>
        <item>Whistler</item>
        <item>White Rock</item>
        <item>Lions Bay</item>
    </string-array>

    <string-array name="provinces">
        <item>BC</item>
    </string-array>

    <string-array name="weather">
        <item>Light Rain</item>
        <item>Rain</item>
        <item>Sunny</item>
        <item>Cloudy</item>
        <item>Snow</item>
        <item>Windy</item>
        <item>Clear</item>
    </string-array>
</resources>